# universe-dao-contracts

community-sale-distribution/: Cargo.toml
community-sale-distribution/examples/: schema.rs
community-sale-distribution/schema/: buyer_input.json  buyer_record.json  buyer_response.json  buyers_response.json  execute_msg.json  instantiate_msg.json  query_msg.json  receive_msg.json
community-sale-distribution/src/: contract.rs  error.rs  msg.rs  state.rs
orders/: Cargo.toml
orders/.cargo/: config
orders/examples/: schema.rs
orders/schema/: execute_msg.json  order_addresses_response.json  order_for_address_ids_response.json  order_response.json  orders_response.json  query_msg.json
orders/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  util.rs
orders/src/ordergroup/: grid.rs  limit.rs  mod.rs  smart.rs
staking/: Cargo.toml  README.md
staking/examples/: schema.rs
staking/schema/: apy_info.json  config_response.json  count_info.json  execute_msg.json  history_info.json  history_response.json  instantiate_msg.json  query_msg.json  staker_info.json  staker_input.json  staker_list_response.json  staker_record.json  treasury_config_response.json  unstaking_info.json  unstaking_response.json
staking/src/: contract.rs  error.rs  msg.rs  state.rs
treasury/: Cargo.toml  README.md
treasury/examples/: schema.rs
treasury/schema/: config_response.json  execute_msg.json  history_info.json  history_response.json  query_msg.json
treasury/src/: contract.rs  error.rs  msg.rs  state.rs
