[package]
name = "universe_community_sale_distribution"
version = "0.0.1"
authors = ["joni@universedao.io", "UniverseDAO"]
edition = "2018"
description = "UniverseDAO Staking contract"
license = "Apache-2.0"
repository = "https://github.com/Universe-DAO/universedao-contracts-juno"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw-utils = { version = "0.13.4" }
cw2 = { version = "0.13.4" }
cw20 = { version = "0.13.4" }
cw20-base = { version = "0.13.4", features = ["library"] }
cosmwasm-std = { version = "1.0.0" }
cw-storage-plus = { version = "0.13.4" }
schemars = "0.8.1"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
hex = "0.4"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
serde_json = "1.0"
