[package]
name = "universe_orders"
version = "1.0.0"
authors = ["joni@universedao.io", "UniverseDAO"]
edition = "2018"
description = "UniverseDAO Ordering contract"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw-utils = { version = "0.11" }
cw2 = { version = "0.11" }
cw20 = { version = "0.10.3" }
cw20-base = { version = "0.10.3", features = ["library"] }
cosmwasm-std = { version = "1.0.0-beta" }
cw-storage-plus = { version = "0.11" }
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
wasmswap = {version = "1.0.0-beta", features = ["library"] }
hex = "0.4"

[dev-dependencies]
cosmwasm-schema = "1.0.0-beta"
serde_json = "1.0"
